Grease Pencil: Strength tool acting wonky when subtracting #74617

Closed
opened 2020-03-10 13:08:36 +01:00 by Erik G. Riebling · 4 comments

System Information
Operating system: MacOS Sierra Version 10.12.6, MacBook Pro (15-inch, Late 2011), 2.4 GHz Intel Core i7 Processor, 16 GB 1333 MHz DDR3 Memory
Graphics card: AMD Radeon HD 6770M 1024 MB, Intel HD Graphics 3000 512 MB

Blender Version
Broken: v 2.82
Worked: v 2.8 (or earlier)

Short description of error
For some unknown reason, the Strength tool in Grease Pencil doesn't work correctly when you subtract from the stroke's opacity. Addition works fine, but I can't get the subtraction working properly.
Exact steps for others to reproduce the error

  1. Create any sort of Grease Pencil object, but make sure the Stroke is checked in the Material Properties box.
  2. In Sculpt Mode, make sure the Strength Tool is active and either enter the Active Tool and Workspace Settings or hold the control key. If you use the former method, change Add to Subtract. Afterwards, simply attempt to brush the strokes.
**System Information** Operating system: MacOS Sierra Version 10.12.6, MacBook Pro (15-inch, Late 2011), 2.4 GHz Intel Core i7 Processor, 16 GB 1333 MHz DDR3 Memory Graphics card: AMD Radeon HD 6770M 1024 MB, Intel HD Graphics 3000 512 MB **Blender Version** Broken: v 2.82 Worked: v 2.8 (or earlier) **Short description of error** For some unknown reason, the Strength tool in Grease Pencil doesn't work correctly when you subtract from the stroke's opacity. Addition works fine, but I can't get the subtraction working properly. **Exact steps for others to reproduce the error** 1. Create any sort of Grease Pencil object, but make sure the Stroke is checked in the Material Properties box. 2. In Sculpt Mode, make sure the Strength Tool is active and either enter the Active Tool and Workspace Settings or hold the control key. If you use the former method, change Add to Subtract. Afterwards, simply attempt to brush the strokes.

Added subscriber: @E-ManAnimates

Added subscriber: @E-ManAnimates
Antonio Vazquez self-assigned this 2020-03-10 16:22:34 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by be20bf2fc0

This issue was referenced by be20bf2fc0704fa5894dbce5e3dbb0b7784eb3eb

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74617
No description provided.