Fix T74617: Gpencil Sculpt Strength brush gets wonky results

Changed how the strength is calculñated and reduce the factor to get a smoother result.